# Study-Bot

./: main.py  pyproject.toml
